The library now finds the versions of the game and the loader. Also added license and readme.